libs/pavex_macros/tests/fail/serde_conflict_after_route_params_without_attributes.rs
#[pavex_macros::RouteParams]
#[derive(serde::Deserialize)]
struct MyStruct {
    field1: i32,
    field2: String,
}

fn main() {}
